tests/error/fullOfErrors/foo.js
adsf;
asd;
sadf;
asf;
sf;
saf;
sf;
sdf;
asfa;
sad;
asf;
fd;
sa;
sda;
NaNdfs;
NaNsadf;
sdaf;
sdfa;
sdfa;
sdfa;
sdfa;
sdfa;
sdfa;
sdf;
fsda;
sfda;
sdfa;
sadf;
asdf;
safd;
asdf;
asdf;
asdf;
asdf;
asdf;
dfs;
sdf;
dfsa;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
afsd;
